<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >
    
    <ImageView 
        android:src="@drawable/diary"
        android:adjustViewBounds="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Homepagetitle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/title"
        android:textStyle="bold" />
    
    <Button 
        android:id="@+id/income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="updateincome"/>

    <TextView 
        android:id="@+id/homepagedate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
     
     <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hometext2"
        android:gravity="center_horizontal"/>
     
     <ListView 
         android:id="@+id/homelistview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
     
     <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creator"
        android:gravity="center_horizontal"/>     
    
     

</LinearLayout>